Added create_bank api
