# banking/models/bank.py
@@ -8,9 +8,9 @@ class Bank(models.Model):
         ('UNION_BANK_OF_INDIA', 'UNION_BANK_OF_INDIA'),
         ('ICIC', 'ICIC'),
     ]
-    name = models.CharField(max_length=128, choices=BANK_NAMES_CHOICES)
-    ifsc_code = models.CharField(max_length=128, null=False, blank=False)
-    branch = models.CharField(max_length=128, null=False, blank=False)
+    name = models.CharField(max_length=255, choices=BANK_NAMES_CHOICES)
+    ifsc_code = models.CharField(max_length=255, unique=True)
+    branch = models.CharField(max_length=255)
     address = models.TextField()
     created_at = models.DateTimeField(auto_now_add=True)
 
